# KG_service_Lab

./: CMakeLists.txt  README.md  c_cpp_properties.json  requirements.txt  terminal_start.txt
python/: graph_builder_hybrid.py  graph_builder_semantic.py  graph_builder_syntax.py  search_kg_server.py
src/: api_handler.cpp  api_handler.hpp  config.hpp  file_manager.cpp  file_manager.hpp  main.cpp  process_manager.cpp  process_manager.hpp  server.cpp  server.hpp
web/: index.html
